[gd_scene load_steps=2 format=3 uid="uid://b1pnqetcbqp4t"]

[ext_resource type="Script" path="res://core/push_pop_tester.gd" id="1_oafdk"]

[node name="BoxContainer" type="BoxContainer"]
script = ExtResource("1_oafdk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Pop1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "POP 1"

[node name="Pop2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "POP 2"

[node name="VSeparator" type="VSeparator" parent="."]
custom_minimum_size = Vector2(26.86, 0)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Push1" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "PUSH 1"

[node name="Push2" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "PUSH2"

[connection signal="pressed" from="VBoxContainer/Pop1" to="." method="_on_pop_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Pop2" to="." method="_on_pop_2_pressed"]
[connection signal="pressed" from="VBoxContainer2/Push1" to="." method="_on_push_1_pressed"]
[connection signal="pressed" from="VBoxContainer2/Push2" to="." method="_on_push_2_pressed"]
